--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.3",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
