--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@devexpress/dx-react-chart-bootstrap4": "^2.7.6",
     "@devexpress/dx-react-core": "^2.7.6",
     "@devexpress/dx-react-grid-material-ui": "^2.7.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,12 +20,15 @@
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-scroll": "^1.8.3",
+    "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
