--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+    "@mui/material": "^5.0.1",
+    "@mui/styled-engine-sc": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-scroll": "^1.8.3",
     "dayjs": "^1.10.7",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
