--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@devexpress/dx-react-chart-bootstrap4": "^2.7.6",
     "@devexpress/dx-react-core": "^2.7.6",
     "@devexpress/dx-react-grid-material-ui": "^2.7.6",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
