--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-responsive": "^8.0.3",
     "@types/react-scroll": "^1.8.3",
     "dayjs": "^1.10.7",
+    "devextreme-react": "^21.1.6",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-hook-form": "^7.15.3",
     "react-intersection-observer": "^8.32.1",
+    "react-responsive": "^9.0.0-beta.4",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
+    "use-media": "^1.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
