--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-responsive": "^9.0.0-beta.4",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "recharts": "^2.1.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "use-media": "^1.4.0",
