--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-responsive": "^8.0.3",
     "@types/react-scroll": "^1.8.3",
     "dayjs": "^1.10.7",
@@ -35,6 +36,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.15.3",
     "react-intersection-observer": "^8.32.1",
     "react-responsive": "^9.0.0-beta.4",
